--- a/client/src/components/HeaderBar/headerbar.scss
+++ b/client/src/components/HeaderBar/headerbar.scss
@@ -6,7 +6,7 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    height: 150px;
+    height: 7.5vw;
     font-size: 3vw;
     display: flex;
     background-color: $headergreen;
@@ -23,7 +23,7 @@
     }
     &__menu {
         width: 8vw;
-        height: 151px;
+        height: 7.87vw;
         background-color: rgba($menublue, 0.9);
         margin: 0;
         color: white;
@@ -44,7 +44,7 @@
         }
         &-line {
             position: relative;
-            font-size: 25px;
+            font-size: 1.4vw;
             font-weight: bold;
             font-family: Arial, Helvetica, sans-serif;
         }
